--- a/package-web/pom.xml
+++ b/package-web/pom.xml
@@ -108,6 +108,7 @@
                                     -H:+BuildReport
                                     -H:+AddAllCharsets
                                     --no-fallback
+                                    --strict-image-heap
                                     --initialize-at-build-time=sun.security.krb5.SCDynamicStoreConfig
                                     --initialize-at-build-time=java.util.ImmutableCollections$ListN
                                     --trace-class-initialization=sun.security.krb5.SCDynamicStoreConfig
