--- a/admin-web/pom.xml
+++ b/admin-web/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>3.1.3-SNAPSHOT</version>
+        <version>3.1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>3.1.3-SNAPSHOT</version>
+    <version>3.1.2</version>
     <artifactId>admin-web</artifactId>
 
     <dependencies>
