--- a/service/pom.xml
+++ b/service/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>3.1.4</version>
+        <version>3.1.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service</artifactId>
-    <version>3.1.4</version>
+    <version>3.1.5-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
