--- a/.github/workflows/ubuntu-arm64-self-hosted-build-preview-native.yml
+++ b/.github/workflows/ubuntu-arm64-self-hosted-build-preview-native.yml
@@ -7,7 +7,8 @@ jobs:
   build:
     name: ZrLog on ${{ matrix.os }} ${{ matrix.architecture }}
 #    runs-on: [self-hosted, Linux, X64]
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+#    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
