--- a/.github/workflows/ubuntu-arm64-self-hosted-build-preview-native.yml
+++ b/.github/workflows/ubuntu-arm64-self-hosted-build-preview-native.yml
@@ -12,8 +12,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
-        architecture: [ amd64 ]
+        os: [ ubuntu-24.04-arm ]
+        architecture: [ arm64 ]
     steps:
       - uses: actions/checkout@v3
         with:
