--- a/package-web/pom.xml
+++ b/package-web/pom.xml
@@ -18,6 +18,8 @@
         <imageName>zrlog</imageName>
         <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
         <libOutputPath>lib</libOutputPath>
+        <native.target>../</native.target>
+
     </properties>
 
     <dependencies>
@@ -196,6 +198,76 @@
                             </archive>
                             <outputDirectory>../</outputDirectory>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdeb</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>jdeb</artifactId>
+                        <groupId>org.vafer</groupId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jdeb</goal>
+                                </goals>
+                                <configuration>
+                                    <snapshotExpand>true</snapshotExpand>
+                                    <snapshotEnv>USER</snapshotEnv>
+                                    <skipPOMs>false</skipPOMs>
+                                    <deb>
+                                        [[buildDir]]/[[artifactId]]_[[version]]+[[gitCommitId]]_[[architecture]].[[extension]]
+                                    </deb>
+                                    <changesOut>
+                                        [[buildDir]]/[[artifactId]]_[[version]]+[[gitCommitId]]_[[architecture]].changes
+                                    </changesOut>
+                                    <controlDir>${basedir}/src/deb/control</controlDir>
+                                    <dataSet>
+                                        <data>
+                                            <src>${native.target}/zrlog</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/usr/bin</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/init.d</src>
+                                            <type>directory</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/init.d</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>../zrlog/README.md</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/zrlog</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                    </dataSet>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
