--- a/package-web/pom.xml
+++ b/package-web/pom.xml
@@ -211,6 +211,7 @@
                     <plugin>
                         <artifactId>jdeb</artifactId>
                         <groupId>org.vafer</groupId>
+                        <version>1.13</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
