--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>3.1.5-SNAPSHOT</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>web</artifactId>
-    <version>3.1.5-SNAPSHOT</version>
+    <version>3.1.5</version>
 
     <dependencies>
         <dependency>
