--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,10 @@
         <common-dao.version>1.1.6</common-dao.version>
         <sws.version>4.0.107</sws.version>
         <!--version 0-->
-        <zrlog-base.version>3.2.110-SNAPSHOT</zrlog-base.version>
-        <zrlog-blog-web.version>3.2.110-SNAPSHOT</zrlog-blog-web.version>
-        <zrlog-admin-web.version>3.2.105-SNAPSHOT</zrlog-admin-web.version>
+        <zrlog-base.version>3.2.111</zrlog-base.version>
+        <zrlog-blog-web.version>3.2.111</zrlog-blog-web.version>
+        <zrlog-admin-web.version>3.2.111</zrlog-admin-web.version>
+        <mysql-scope>compile</mysql-scope>
     </properties>
 
     <developers>
@@ -154,6 +155,7 @@
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>9.3.0</version>
+                <scope>${mysql-scope}</scope>
             </dependency>
             <dependency>
                 <groupId>jakarta.servlet</groupId>
